--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dom": "^0.0.3",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet-async": "^1.3.0",
